@@ -1,11 +1,11 @@
-#!/usr/bin/perl
+#!/usr/bin/perl -I../lib
 
 use Data::Dumper;
 use Getopt::Long;
 use VMware::API::LabManager;
 use strict;
 
-my $version = ( split ' ', '$Revision: 2.0 $' )[1];
+my $version = ( split ' ', '$Revision: 2.1 $' )[1];
 
 my ( $username, $password, $server);
 my $orgname   = 'Global';
